# wine-app

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  justfile
.cargo/: config.toml
.claude/: launch.json
crates/client/: Cargo.toml
crates/client/src/: handle.rs  lib.rs  sqlite.rs  store.rs  sync.rs
crates/core/: Cargo.toml  build.rs
crates/core/src/: ids.rs  lib.rs  model.rs  store.rs  sync.rs  views.rs  vocab.rs  vocab_enums.ron
crates/core/src/seed/: mod.rs
crates/core/src/seed/files/: france.ron  global.ron  us.ron
crates/core/templates/: base.html  index.html
crates/core/templates/fragments/: bottle_count.html
crates/server/: Cargo.toml  build.rs
crates/server/src/: assets.rs  db.rs  main.rs  seed.rs  state.rs  sync.rs  web.rs
docs/plans/: 2026-07-03-entry-form-design.md  PROJECT-HANDOFF.md  README.md
migrations/: 0001_init.sql
web/: package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json  vite.config.ts
web/public/: manifest.webmanifest
web/scripts/: vendor.ts
web/src/: offline.ts  sw.ts  types.ts  worker.ts
