[workspace]
resolver = "2"
members = ["crates/core", "crates/server", "crates/client"]
# `cargo build` builds only the native crates. The wasm client is built
# separately: cargo build -p wine-client --target wasm32-unknown-unknown
default-members = ["crates/core", "crates/server"]

[workspace.package]
edition = "2021"
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ron = "0.8"
time = { version = "0.3", features = ["serde", "formatting", "parsing"] }
askama = "0.12"
async-trait = "0.1"
