[package]
name = "wine-server"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
wine-core = { path = "../core" }
serde.workspace = true
serde_json.workspace = true
time.workspace = true
askama.workspace = true
async-trait.workspace = true

axum = "0.7"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net"] }
tower-http = { version = "0.6", features = ["fs", "compression-gzip", "trace"] }
sqlx = { version = "0.8", features = [
  "runtime-tokio-rustls",
  "postgres",
  "time",
  "migrate",
] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
